DuPont DevSB/src/objects/QATest_Run__c.object
<CustomObject>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QATest_Script__c</fullName>
        <label>QATest Script</label>
        <referenceTo>QATest_Script__c</referenceTo>
        <relationshipLabel>QATest Runs</relationshipLabel>
        <relationshipName>QATest_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Run_Date__c</fullName>
        <label>Test Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Run_Verdict__c</fullName>
        <label>Test Run Verdict</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never Run</fullName>
                    <default>true</default>
                    <label>Never Run</label>
                </value>
                <value>
                    <fullName>Testing In Progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Failed - Due to Integration</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QATest_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QATest Run</label>
    <nameField>
        <displayFormat>qaRun-{0000}</displayFormat>
        <label>QATest Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QATest Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>